fix bottom ad spacing

--- a/app/assets/stylesheets/quizzes_show.scss
+++ b/app/assets/stylesheets/quizzes_show.scss
@@ -513,9 +513,9 @@
 	@include justify-content(space-between);
 	width: 620px;
 	.bottom-ad {
-		width: 300px;
+		width: 180px;
 		margin-bottom: 20px;
-		height: 250px;
+		height: 150px;
 		border-radius: 8px;
 	}
 }
